<resources>
    <string name="app_name">Workout App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- API KEYS -->
    <string name="google_maps_key">AIzaSyCs1KHl8BynMVvSb0dW2pkkyUc1Q8ruNmk</string>
    <!-- Permission Related -->
    <string name="permission_denied_explanation">
        You need to grant "All time" location permission in order to use the tracker.
    </string>
    <string name="settings">Settings</string>
    <!-- Notification Related -->
    <string name="notification_channel_description">Nuke Run status notification</string>

    <!-- Tracking Fragment Strings -->
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="cycling">Cycling</string>
    <string name="running">Running</string>
    <string name="distance_unit">m</string>
    <string name="speed_unit">km/h</string>
    <string name="steps_unit">steps</string>
    <string name="loading">Please wait…</string>

    <!-- Tracker Viewer Fragment Strings -->
    <string name="viewer_track_type">Track Type</string>
    <string name="viewer_date">27/04/2021</string>
    <string name="viewer_time">12.00 – 15.00</string>
    <string name="viewer_map">Map Route</string>
    <string name="viewer_dist_unit">km</string>
    <string name="viewer_hour_unit">h</string>
    <string name="viewer_minute_unit">m</string>
    <string name="viewer_second_unit">s</string>
</resources>